fix: do not show vertical scrollbar for charts in dashboard

--- a/superset-frontend/src/dashboard/stylesheets/components/chart.less
+++ b/superset-frontend/src/dashboard/stylesheets/components/chart.less
@@ -116,8 +116,6 @@
 
 .chart-slice {
   height: calc(100% - 32px);
-  overflow: auto;
-  height: 100%;
 }
 
 .dot {
